# produtos-identificador

./: .env.example  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
data/manual/: ml_blacklist.csv  shopee_manual.csv
output/ml/clean/: ml_products_clean.csv
output/ml/raw/: ml_cdp.csv
output/reports/: manual_opportunities.csv
src/produtos_identificador/: __init__.py  chrome_profiles.py  cli.py  config.py  ml_preprocess.py  models.py  normalizer.py  pricing.py  streamlit_app.py
src/produtos_identificador/collectors/: mercadolivre_browser.py  mercadolivre_scraper.py
tests/: test_mercadolivre_scraper.py  test_ml_preprocess.py  test_streamlit_app.py
